<resources>
    <string name="app_name">ServiceSight</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="username">Username</string>
    <string name="contact_mail">contact : development@anaamalaistech.com</string>
    <string name="logo">Logo</string>
    <string name="cmplogo">Company Logo</string>
    <string name="logoword">PitCrew</string>
    <string name="logout">Logout</string>
    <string name="inward">Inward</string>
    <string name="delivery">Delivery</string>
    <string name="users">Users</string>
    <string name="report">Report</string>
    <string name="customer">Customer</string>
    <string name="open_nav">Open Nav</string>
    <string name="close_nav">Close Nav</string>
    <string name="bck_icn">Back Icon</string>
    <string name="cnt_nme">Contact Name</string>
    <string name="whts_no">Whatsapp No.</string>
    <string name="eml">Email</string>
    <string name="veh_no">Vehicle No</string>
    <string name="veh_brd">Vehicle Brand</string>
    <string name="veh_mdl">Vehicle Model</string>
    <string name="veh_yr">Vehicle Year</string>
    <string name="add_veh">Add Vehicle</string>
    <string name="btn_upd">Update</string>
    <string name="btn_del">Delete</string>
    <string name="veh_det">Vehicle Details</string>
    <string name="btn_nxt">Next</string>
    <string name="last_inward_date">Last Inward Date</string>
    <string name="last_delivery_date">Last Delivery Date</string>
    <string name="src">Search</string>
    <string name="prt">Print</string>
    <string name="type_for_filter">Type for filter (Vehicle or Mobile)</string>
    <string name="add">Add</string>
    <string name="rcy_view">Recycler View</string>
    <string name="src_ser">Search Service</string>
    <string name="nme">Name</string>
    <string name="none">None</string>
    <string name="mob">Mobile No</string>
    <string name="select">Select</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="camera">Camera</string>
    <string name="finish">Finish</string>
</resources>